# insurance_copilot

./: .gitignore  pyproject.toml
docs/: demo-script.md  prd.md
insurance-copilot/: README.md
insurance-copilot/src/insurance_copilot/: app.py  models.py
insurance-copilot/src/insurance_copilot/data/: providers.json  scenarios.json
insurance-copilot/src/insurance_copilot/routes/: __init__.py
insurance-copilot/src/insurance_copilot/services/: __init__.py
insurance-copilot/src/insurance_copilot/static/: app.js
insurance-copilot/src/insurance_copilot/templates/: index.html
insurance-copilot/tests/: test_api.py  test_services.py
src/insurance_copilot/: __init__.py  app.py  config.py  dependencies.py  models.py  state.py
src/insurance_copilot/data/: customers.json  demo.sqlite3  policies.json
src/insurance_copilot/routes/: api.py  web.py
src/insurance_copilot/services/: __init__.py  claim_extraction_service.py  conversation_service.py  coverage_service.py  database_service.py  demo_data_service.py  dispatch_service.py  notification_service.py  openai_service.py
src/insurance_copilot/static/: app.js  notifications.js  styles.css
src/insurance_copilot/templates/: index.html  notifications.html
tests/: conftest.py  test_api.py  test_openai_integration.py  test_services.py
